# VideoStabilization

./: CMakeLists.txt  PatchStabilization.cpp  PatchStabilization.h  README.md  VideoStabilization.sln  main.cpp
VideoStabilization/: PatchStabilization.cpp  PatchStabilization.h  VideoStabilization.vcxproj  VideoStabilization.vcxproj.filters  main.cpp
VideoStabilization/VideoSamples/: test2.avi
cmake/: target-link-libraries-linux.cmake  target-link-libraries-windows.cmake
samples/: test1.avi  test3.avi
